@@ -3,6 +3,8 @@ package com.auzeill;
 import java.util.ArrayList;
 import java.util.List;
 
+import static com.auzeill.Utils.precondition;
+
 public final class Cell {
   private final static List<Character> ALL_ALTERNATIVES = "ABCDEFGHIJKLMNOPQRSTUVWXYZ".chars()
     .mapToObj(c -> (char) c)
@@ -27,6 +29,7 @@ public final class Cell {
 
   public void removeAlternative(Character alternative, ChangeListener emitter) {
     if (alternatives.remove(alternative)) {
+      precondition(!alternatives.isEmpty());
       changeListeners
         .stream().filter(listener -> listener != emitter)
         .forEach(listener -> listener.onRemove(this, alternative));
@@ -34,14 +37,7 @@ public final class Cell {
   }
 
   public String text() {
-    return String.format("(%02d,%02d)", positions.getFirst().line().index(), positions.getFirst().col());
-  }
-
-  public String alternativesText() {
-    if (alternatives.size() == 1) {
-      return " " + alternatives.get(0) + " ";
-    }
-    return String.format("%03d", alternatives.size());
+    return alternatives.size() == 1 ? (" " + alternatives.get(0)) : String.format("%2d", alternatives.size());
   }
 
 }
